test/sematest/invalid/assign_to_unop.java
class A {
  public static void main(String[] args) {
    boolean a = 0;
    !a = a;
  }
}
